--- a/index.html
+++ b/index.html
@@ -1,34 +1,17 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>स्वाद में खास RJ पापड़ का विश्वास</title>
-  <meta name="description" content="RJ Papad Surat - 100% घर का बना उड़द मरी पापड़, सोडा व केमिकल फ्री, ₹330/kg में सच्चा स्वाद, 15+ साल का भरोसा।">
-  <meta name="keywords" content="RJ Papad Surat, उड़द पापड़, मरी पापड़, घर का बना पापड़, Gujarati Papad, Homemade Papad">
+  <meta name="description" content="RJ Papad Surat - Homemade papad.">
+  <meta name="keywords" content="RJ Papad, papad, surat, homemade">
   <meta name="robots" content="index, follow">
 
-  <!-- JSON Schema -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "LocalBusiness",
-    "name": "RJ Papad Surat",
-    "description": "स्वाद में खास RJ Papad का विश्वास - उड़द मरी पापड़ ₹330/kg में",
-    "image": "https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png",
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Surat",
-      "addressCountry": "IN"
-    },
-    "telephone": "+916353745646",
-    "url": "https://rjpapad111983-svg.github.io/"
-  }
-  </script>
-
   <style>
+    /* ====== BASIC STYLES ====== */
     body {
-      font-family: "Noto Sans Devanagari", sans-serif;
+      font-family: "Noto Sans Devanagari", "Noto Sans", Arial, sans-serif;
       background-color: #fffbe6;
       color: #333;
       text-align: center;
@@ -36,160 +19,208 @@
       padding: 0;
     }
 
-    header {
-      background-color: #ffeb3b;
-      padding: 20px;
-      border-radius: 0 0 20px 20px;
-    }
+    header { background-color:#ffeb3b; padding:20px; border-radius:0 0 20px 20px; }
+    header h1 { margin:0; font-size:1.8rem; color:#222; }
 
-    header h1 {
-      margin: 0;
-      font-size: 1.8rem;
-      color: #222;
-    }
+    img { max-width:100%; height:auto; margin:15px 0; border-radius:10px; }
+    p { font-size:1.15rem; margin:10px; color:#3b2a18; }
 
-    img {
-      max-width: 100%;
-      height: auto;
-      margin: 15px 0;
-      border-radius: 10px;
-    }
+    .btn { display:inline-block; background-color:#25d366; color:white; padding:12px 25px; border-radius:25px; text-decoration:none; font-weight:bold; margin-top:15px; }
+    .btn:hover { background-color:#128c7e; }
 
-    p {
-      font-size: 1.2rem;
-      margin: 10px;
-    }
+    footer { margin-top:30px; font-size:0.9rem; color:#777; padding:12px 8px; }
 
-    .btn {
-      display: inline-block;
-      background-color: #25d366;
+    input { width:90%; max-width:400px; padding:10px; margin:8px 0; border-radius:8px; border:1px solid #ccc; font-size:1rem; }
+
+    /* ====== LANG BUTTONS ====== */
+    .lang-btn {
+      background-color: #4a2e00;
       color: white;
-      padding: 12px 25px;
-      border-radius: 25px;
-      text-decoration: none;
+      border: none;
+      padding: 10px 18px;
+      margin: 6px;
+      border-radius: 20px;
+      cursor: pointer;
       font-weight: bold;
-      margin-top: 15px;
-    }
-
-    .btn:hover {
-      background-color: #128c7e;
-    }
-
-    footer {
-      margin-top: 30px;
-      font-size: 0.9rem;
-      color: #777;
-    }
-
-    input {
-      width: 90%;
-      max-width: 400px;
-      padding: 10px;
-      margin: 8px 0;
-      border-radius: 8px;
-      border: 1px solid #ccc;
       font-size: 1rem;
+      transition: background 0.2s;
+    }
+    .lang-btn:hover { background-color: #6d3b00; }
+
+    /* ====== FULLSCREEN LOGO ====== */
+    #logo-screen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      background-color: #ffeb3b;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+      transition: opacity 0.8s ease;
+    }
+    #logo-screen img { width: 250px; height: auto; border-radius: 50%; box-shadow: 0 0 20px rgba(0,0,0,0.25); }
+    #logo-screen h2 { margin-top: 18px; color: #4a2e00; font-size:1.4rem; }
+
+    /* small responsive tweak */
+    @media (max-width:420px) {
+      #logo-screen img { width: 180px; }
+      .lang-btn { padding: 8px 12px; font-size:0.95rem; }
     }
   </style>
 </head>
 <body>
+
   <!-- ===== FULL SCREEN LOGO SECTION ===== -->
-<div id="logo-screen" style="
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: #ffeb3b;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: 9999;
-  transition: opacity 1s ease;
-">
-  <img 
-    src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png"
-    alt="RJ Papad Surat Logo"
-    style="width:250px; height:auto; border-radius:50%; box-shadow:0 0 20px rgba(0,0,0,0.3);">
-  <h2 style="margin-top:20px; color:#4a2e00; font-size:1.5rem; font-family:'Noto Sans Devanagari';">
-    RJ Papad Surat
-  </h2>
-</div>
-  
-  <img 
-    src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png"
-    alt="RJ Papad Surat Logo"
-    style="width:250px; height:auto; border-radius:50%; box-shadow:0 0 20px rgba(0,0,0,0.3);">
-    
-  <h2 style="margin-top:20px; color:#4a2e00; font-size:1.5rem; font-family:'Noto Sans Devanagari';">
-    RJ Papad Surat
-  </h2>
-</div>
-<!-- ===== RJ Papad Surat LOGO ===== -->
-<div style="text-align:center; margin-top:15px;">
-  <img 
-    src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png"
-    alt="RJ Papad Surat Logo"
-    style="width:180px; height:auto; border-radius:50%; box-shadow:0 0 10px rgba(0,0,0,0.2);">
-</div>
-  <!-- ====== HEADER ====== -->
+  <div id="logo-screen" aria-hidden="false">
+    <!-- TODO: replace the src below with your raw GitHub image URL for the logo -->
+    <img src="https://raw.githubusercontent.com/yourusername/yourrepo/main/rj-papad-logo.png" alt="RJ Papad Surat Logo">
+    <h2>RJ Papad Surat</h2>
+
+    <!-- Language selection buttons (visible on logo screen) -->
+    <div style="margin-top:28px;">
+      <button class="lang-btn" onclick="setLanguage('hi')">हिन्दी</button>
+      <button class="lang-btn" onclick="setLanguage('en')">English</button>
+      <button class="lang-btn" onclick="setLanguage('gu')">ગુજરાતી</button>
+    </div>
+    <small style="margin-top:12px; color:#4a2e00;">Select language to continue</small>
+  </div>
+
+  <!-- ===== HEADER (main site content) ===== -->
   <header>
-    <h1>स्वाद में खास RJ पापड़ का विश्वास</h1>
+    <h1 id="header-text">स्वाद में खास RJ पापड़ का विश्वास</h1>
   </header>
 
-  <!-- ====== RJ Papad BANNERS Section ====== -->
-  <div style="text-align:center; margin:20px 0;">
-
-    <!-- 🥇 पहला बैनर -->
-    <img
-      src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png"
-      alt="स्वाद में खास RJ Papad का विश्वास">
-<img
-   src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png"
- 
+  <!-- ===== BANNERS SECTION ===== -->
+  <div style="text-align:center; margin:16px;">
+    <!-- Replace these banner src with your real banner images -->
+    <img src="https://raw.githubusercontent.com/yourusername/yourrepo/main/banner-top.jpg" alt="स्वाद में खास RJ Papad का विश्वास">
+    <!-- Optional second banner (comment out if not used) -->
+    <!-- <img src="https://raw.githubusercontent.com/yourusername/yourrepo/main/banner-why.jpg" alt="क्यों चुनें RJ Papad Surat"> -->
   </div>
 
-  <!-- ====== विवरण Section ====== -->
-  <div style="text-align:center;">
-    <p><strong>उड़द मरी पापड़ • ₹330/kg • Only Surat Free Delivery</strong></p>
-    <p><strong>होममेड टेस्ट • शुद्ध सामग्री • RJ Papad Surat की विशेषता</strong></p>
+  <!-- ===== DESCRIPTION SECTION ===== -->
+  <div style="text-align:center; padding:0 10px;">
+    <p id="desc1"><strong>उड़द मरी पापड़ • ₹330/kg</strong></p>
+    <p id="desc2"><strong>होममेड टेस्ट • शुद्ध सामग्री</strong></p>
   </div>
 
-  <!-- ====== ऑर्डर विवरण Section ====== -->
-  <div style="text-align:center; margin-top:20px;">
-    <h3>अपना ऑर्डर विवरण भरें</h3>
-    <p>📦 कृपया नीचे अपनी जानकारी भरें ताकि हम आपका ऑर्डर कन्फर्म कर सकें।</p>
+  <!-- ===== ORDER FORM SECTION ===== -->
+  <div style="text-align:center; margin-top:6px;">
+    <h3 id="orderTitle">अपना ऑर्डर विवरण भरें</h3>
+    <p id="orderHint">कृपया नीचे अपनी जानकारी भरें ताकि हम आपसे संपर्क कर सकें।</p>
 
-    <input type="text" id="name" placeholder="नाम">
-    <input type="text" id="address" placeholder="पता">
-    <input type="text" id="pincode" placeholder="पिनकोड">
-    <input type="text" id="mobile" placeholder="मोबाइल नंबर">
+    <div>
+      <input type="text" id="name" placeholder="आपका नाम" />
+      <input type="text" id="address" placeholder="पता" />
+      <input type="text" id="pincode" placeholder="पिनकोड" />
+      <input type="text" id="mobile" placeholder="मोबाइल नंबर" />
+    </div>
 
-    <!-- WhatsApp Button -->
+    <!-- WhatsApp Order Button -->
     <div style="margin-top:14px;">
-      <a href="#" class="btn" onclick="sendWhatsApp()">📲 ऑर्डर करने के लिए यहाँ क्लिक करें</a>
+      <a href="#" class="btn" onclick="sendWhatsApp()">WhatsApp पर भेजें</a>
     </div>
   </div>
 
-  <!-- ====== Footer ====== -->
-  <footer>
-    © 2025 RJ Papad Surat | स्वाद में खास RJ पापड़ का विश्वास
-  </footer>
+  <!-- ===== FOOTER ===== -->
+  <footer id="footer">© 2025 RJ Papad Surat | स्वाद में खास RJ पापड़ का विश्वास</footer>
 
-  <!-- ====== WhatsApp Send Script ====== -->
+  <!-- ===== EXISTING / WHATSAPP SCRIPT (send order) ===== -->
   <script>
     function sendWhatsApp() {
-      var name = document.getElementById('name').value;
-      var address = document.getElementById('address').value;
-      var pincode = document.getElementById('pincode').value;
-      var mobile = document.getElementById('mobile').value;
+      var name = document.getElementById('name').value || '';
+      var address = document.getElementById('address').value || '';
+      var pincode = document.getElementById('pincode').value || '';
+      var mobile = document.getElementById('mobile').value || '';
 
-      var message = `नमस्ते RJ Papad Surat,%0Aमेरा ऑर्डर विवरण:%0Aनाम: ${name}%0Aपता: ${address}%0Aपिनकोड: ${pincode}%0Aमोबाइल नंबर: ${mobile}`;
-      var whatsappURL = `https://wa.me/916353745646?text=${message}`;
+      var message = `नमस्ते RJ Papad Surat%0Aनाम: ${encodeURIComponent(name)}%0Aपता: ${encodeURIComponent(address)}%0Aपिनकोड: ${encodeURIComponent(pincode)}%0Aमोबाइल: ${encodeURIComponent(mobile)}`;
+      var phoneNumber = "91XXXXXXXXXX"; // <- अपना WhatsApp नंबर "countryCode+number" यहाँ डालें (जैसे 9196353745646)
+      var whatsappURL = `https://wa.me/${phoneNumber}?text=${message}`;
 
       window.open(whatsappURL, "_blank");
     }
+  </script>
+
+  <!-- ===== LANGUAGE TRANSLATION SCRIPT ===== -->
+  <script>
+    const translations = {
+      hi: {
+        header: "स्वाद में खास RJ पापड़ का विश्वास",
+        description1: "उड़द मरी पापड़ • ₹330/kg",
+        description2: "होममेड टेस्ट • शुद्ध सामग्री",
+        orderTitle: "अपना ऑर्डर विवरण भरें",
+        orderHint: "कृपया नीचे अपनी जानकारी भरें ताकि हम आपसे संपर्क कर सकें।",
+        footer: "© 2025 RJ Papad Surat | स्वाद में खास RJ पापड़ का विश्वास"
+      },
+      en: {
+        header: "RJ Papad Surat - The Taste You Trust",
+        description1: "Udad Mari Papad • ₹330/kg",
+        description2: "Homemade Taste • Pure Ingredients",
+        orderTitle: "Fill Your Order Details",
+        orderHint: "Please fill in your details below so we can contact you.",
+        footer: "© 2025 RJ Papad Surat | The Taste You Trust"
+      },
+      gu: {
+        header: "સ્વાદમાં ખાસ RJ પાપડનો વિશ્વાસ",
+        description1: "ઉડદ મરી પાપડ • ₹330/kg",
+        description2: "ઘરેલું સ્વાદ • શુદ્ધ સામગ્રી",
+        orderTitle: "તમારો ઓર્ડર વિગત ભરો",
+        orderHint: "કૃપા કરીને નીચે તમારી માહિતી ભરો જેથી અમે સંપર્ક કરી શકીએ.",
+        footer: "© 2025 RJ Papad Surat | સ્વાદમાં ખાસ RJ પાપડનો વિશ્વાસ"
+      }
+    };
+
+    // Apply chosen language strings to page
+    function applyLanguage(lang) {
+      const t = translations[lang];
+      if (!t) return;
+      const headerEl = document.querySelector('#header-text');
+      if (headerEl) headerEl.innerText = t.header;
+
+      const d1 = document.querySelector('#desc1'); if (d1) d1.innerText = t.description1;
+      const d2 = document.querySelector('#desc2'); if (d2) d2.innerText = t.description2;
+      const oT = document.querySelector('#orderTitle'); if (oT) oT.innerText = t.orderTitle;
+      const oH = document.querySelector('#orderHint'); if (oH) oH.innerText = t.orderHint;
+      const f = document.querySelector('#footer'); if (f) f.innerText = t.footer;
+    }
+
+    // Called when user clicks language button
+    function setLanguage(lang) {
+      if (!translations[lang]) return;
+      localStorage.setItem('rjpapad_lang', lang);
+      applyLanguage(lang);
+      fadeOutLogo(); // hide logo immediately after selection
+    }
+
+    // Fade out & hide logo screen
+    function fadeOutLogo() {
+      const logo = document.getElementById('logo-screen');
+      if (!logo) return;
+      logo.style.opacity = '0';
+      setTimeout(() => {
+        logo.style.display = 'none';
+      }, 900);
+    }
+
+    // On page load: apply saved language (if any) and auto-hide logo after 2s
+    window.addEventListener('load', () => {
+      const saved = localStorage.getItem('rjpapad_lang') || 'hi';
+      applyLanguage(saved);
+
+      // Auto-hide logo after 2s (if user doesn't choose)
+      setTimeout(() => {
+        const logo = document.getElementById('logo-screen');
+        if (!logo) return;
+        // If logo is still visible (user didn't click), hide it
+        if (logo.style.display !== 'none') {
+          fadeOutLogo();
+        }
+      }, 2000);
+    });
   </script>
 
 </body>
