--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <!-- Replace these banner src with your real banner images -->
     <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png"alt="स्वाद में खास RJ Papad का विश्वास">
     <!-- Optional second banner (comment out if not used) -->
-    <!-- <img src="https://raw.githubusercontent.com/yourusername/yourrepo/main/banner-why.jpg" alt="क्यों चुनें RJ Papad Surat"> -->
+    <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png"alt="क्यों चुनें RJ Papad Surat">
   </div>
 
   <!-- ===== DESCRIPTION SECTION ===== -->
