--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <!-- FULL SCREEN LOGO (shows once until language chosen) -->
   <div id="logo-screen" aria-hidden="false">
-    <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png"alt="logo" style="width:150px;max-width:60%;">
+    <img src="https://raw.githubusercontent.com/rjpap/example/main/logo.png" alt="logo" style="width:150px;max-width:60%;">
     <h2>RJ Papad Surat</h2>
 
     <!-- language buttons -->
@@ -56,7 +56,7 @@
 
   <main>
     <!-- Banners -->
-    <div style="text-align:cener; margin-bottom:18px;">
+    <div style="text-align:center; margin-bottom:18px;">
       <img src="https://raw.githubusercontent.com/rjpap/example/main/banner1.jpg" alt="banner" style="max-width:100%;height:auto;">
     </div>
 
