--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
     }
     header { background: #fff; padding: 18px 12px; box-shadow: 0 1px 0 rgba(0,0,0,0.06);}
     #logo-screen {
-      position: fixed; top:0; left:0; width:100%; height:100vh;
-      background-color:#ffeb3b; display:flex; flex-direction:column;
-      justify-content:center; align-items:center; z-index:9999; transition: opacity .9s;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffeb3b;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 1;                      /* शुरुआत में दिखे */
+  transition: opacity 0.9s ease;   /* धीरे fade out हो */
+  z-index: 9999;                   /* ऊपर रहे ताकि content छिपा रहे */
     }
     .lang-btn {
       background-color: #4a2e00;
